added css to about me, work, and contact sections

--- a/index.html
+++ b/index.html
@@ -29,84 +29,96 @@
 <!-- NAVIGATION BAR ENDS -->
 
 <!-- HERO SECTION STARTS -->
-    <section class="hero">
-        <h2>
-            Great quote
-        </h2>
+    <section>
+        <div class="hero">
+            <h2>
+                Great quote
+            </h2>
+        </div>
     </section>
 <!-- HERO SECTION ENDS -->
 
 <!-- ABOUT ME SECTION START -->
     <section id="about-me" class="content">
-        <div class="left-box">
-            <h2 class="content-header">About Me</h2>
-        </div>
-        <div class="right-box">
-            <p>My bio info that I have yet to write, blah.</p>
+        <div class="me-section">
+            <div class="left-box">
+                <h2 class="me-header">About Me</h2>
+            </div>
+            <div class="right-box">
+                <p>My bio info that I have yet to write, blah. Right now my brain is so fried with all this important information that I would not even know where to begin to describe myself. All I've got is that currently I am a hair stylist in Richmond, VA and I'm looking to change careers completely!</p>
+            </div>
         </div>
     </section>
 <!-- ABOUT ME SECTION END -->
 
 <!-- WORK SECTION START -->
     <section id="work" class="content">
-        <div class="left-box">
-            <h2 class="content-header">Work</h2>
-        </div>
-        <div class="right-box">
-            <article class="work-project1">
-                <div class="project-box">
-                    <h3 class="project-name">Run Buddy</h3>
-                    <h4 class="project-type">HTML/CSS</h4>
-                </div>
-            </article>
-            <article class="work-project2">
-                <div class="project-box">
-                    <h3 class="project-name">LED Wall</h3>
-                    <h4 class="project-type">NOPE/IoT</h4>
-                </div>
-            </article>
-            <article class="work-project3">
-                <div class="project-box">
-                    <h3 class="project-name">Calculator</h3>
-                    <h4 class="project-type">React/JavaScript/CSS</h4>
-                </div>
-            </article>
-            <article class="work-projects4">
-                <div class="project-box">
-                    <h3 class="project-name">Surf Report</h3>
-                    <h4 class="project-type">MERN Stack</h4>
-                </div>
-            </article>
-            <article class="work-project5">
-                <div class="project-box">
-                    <h3 class="project-name">Pastel Puzzles</h3>
-                    <h4 class="project-type">MERN Stack</h4>
-                </div>
-            </article>
+        <div class="work-section">
+            <div class="left-box">
+                <h2 class="work-header">Work</h2>
+            </div>
+            <div class="right-box2">
+                <article class="work-project1">
+                    <div class="project-box">
+                        <h3 class="project-name">Run Buddy</h3>
+                        <h4 class="project-type">HTML/CSS</h4>
+                    </div>
+                </article>
+                <article class="work-project2">
+                    <div class="project-box">
+                        <h3 class="project-name">LED Wall</h3>
+                        <h4 class="project-type">NOPE/IoT</h4>
+                    </div>
+                </article>
+                <article class="work-project3">
+                    <div class="project-box">
+                        <h3 class="project-name">Calculator</h3>
+                        <h4 class="project-type">React/JavaScript/CSS</h4>
+                    </div>
+                </article>
+                <article class="work-projects4">
+                    <div class="project-box">
+                        <h3 class="project-name">Surf Report</h3>
+                        <h4 class="project-type">MERN Stack</h4>
+                    </div>
+                </article>
+                <article class="work-project5">
+                    <div class="project-box">
+                        <h3 class="project-name">Pastel Puzzles</h3>
+                        <h4 class="project-type">MERN Stack</h4>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
 <!-- WORK SECTION END -->
 
 <!-- CONTACT ME SECTION START -->
     <section id="contact-me" class="content">
-        <div class="left-box">
-            <h2 class="content-header">Contact Me</h2>
-        </div>
-        <div class="right-box">
-            <ul>
-                <li>
-                    <a href="tel:8042297909">Phone</a>
-                </li>
-                <li>
-                    <a href="mailto:ckoehler16@gmail.com">Email</a>
-                </li>
-                <li>
-                    <a href="https://github.com/ckoehler16">Github</a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/courtney-koehler-979050232/">Linkedin</a>
-                </li>
-            </ul>
+        <div class="contact-section">
+            <div class="left-box2">
+                <h2 class="contact-header">
+                    Contact
+                    <br>
+                     Me
+                </h2>
+            </div>
+            <div class="right-box">
+                <ul>
+                    <li>
+                        <a href="tel:8042297909">Phone</a>
+                    </li>
+                    <li>
+                        <a href="mailto:ckoehler16@gmail.com">Email</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/ckoehler16">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/courtney-koehler-979050232/">Linkedin</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 <!-- CONTACT ME SECTION END -->
