added flex and background images to work section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="right-box2">
                 <article class="work-project1">
                     <div class="project-box">
-                        <h3 class="project-name">Run Buddy</h3>
+                        <a href="https://ckoehler16.github.io/run-buddy/">Run Buddy</a>
                         <h4 class="project-type">HTML/CSS</h4>
                     </div>
                 </article>
@@ -76,7 +76,7 @@
                         <h4 class="project-type">React/JavaScript/CSS</h4>
                     </div>
                 </article>
-                <article class="work-projects4">
+                <article class="work-project4">
                     <div class="project-box">
                         <h3 class="project-name">Surf Report</h3>
                         <h4 class="project-type">MERN Stack</h4>
