--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                      Me
                 </h2>
             </div>
-            <div class="right-box">
+            <div class="right-box3">
                 <ul>
                     <li>
                         <a href="tel:8042297909">Phone</a>
