--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </article>
                 <article class="work-project2">
                     <div class="project-box">
-                        <h3 class="project-name">LED Wall</h3>
+                        <a href="https://ckoehler16.github.io/Cocktail-Generator/">Cocktail & Dinner Recipe</a>
                         <h4 class="project-type">NOPE/IoT</h4>
                     </div>
                 </article>
