added a new project to my work

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
                 <article class="work-project1">
                     <div class="project-box">
                         <a href="https://ckoehler16.github.io/run-buddy/">Run Buddy</a>
-                        <h4 class="project-type">HTML/CSS</h4>
+                        <p class="project-type">HTML/CSS</p>
                     </div>
                 </article>
                 <article class="work-project2">
                     <div class="project-box">
                         <a href="https://ckoehler16.github.io/Cocktail-Generator/">Cocktail & Dinner Recipe</a>
-                        <h4 class="project-type">NOPE/IoT</h4>
+                        <p class="project-type">HTML/CSS/JavaScript/API's</p>
                     </div>
                 </article>
                 <article class="work-project3">
                     <div class="project-box">
-                        <h3 class="project-name">Calculator</h3>
-                        <h4 class="project-type">React/JavaScript/CSS</h4>
+                        <a href="https://shrouded-gorge-64455.herokuapp.com/">My Recipe Pantry</a>
+                        <p class="project-type">JavaScript/MySql/Expressjs/Animejs/Sequelize/Handlebars</p>
                     </div>
                 </article>
-                <article class="work-project4">
+                <!-- <article class="work-project4">
                     <div class="project-box">
                         <h3 class="project-name">Surf Report</h3>
                         <h4 class="project-type">MERN Stack</h4>
@@ -87,7 +87,7 @@
                         <h3 class="project-name">Pastel Puzzles</h3>
                         <h4 class="project-type">MERN Stack</h4>
                     </div>
-                </article>
+                </article> -->
             </div>
         </div>
     </section>
