links open in new page

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             <div class="right-box2">
                 <article class="work-project1">
                     <div class="project-box">
-                        <a href="https://ckoehler16.github.io/run-buddy/">Run Buddy</a>
+                        <a href="https://ckoehler16.github.io/run-buddy/" target="_blank">Run Buddy</a>
                         <p class="project-type">HTML/CSS</p>
                     </div>
                 </article>
                 <article class="work-project2">
                     <div class="project-box">
-                        <a href="https://ckoehler16.github.io/Cocktail-Generator/">Cocktail & Dinner Recipe</a>
+                        <a href="https://ckoehler16.github.io/Cocktail-Generator/" target="_blank">Cocktail & Dinner Recipe</a>
                         <p class="project-type">HTML/CSS/JavaScript/API's</p>
                     </div>
                 </article>
                 <article class="work-project3">
                     <div class="project-box">
-                        <a href="https://shrouded-gorge-64455.herokuapp.com/">My Recipe Pantry</a>
+                        <a href="https://shrouded-gorge-64455.herokuapp.com/" target="_blank">My Recipe Pantry</a>
                         <p class="project-type">JavaScript/MySql/Expressjs/Animejs/Sequelize/Handlebars</p>
                     </div>
                 </article>
